--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -5,9 +5,14 @@ on:
   pull_request:
     branches: [ "main" ]
 
-jobs:
-  deploy:
+deploy:
+  get_caller_identity:
+    name: Deploy Site
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
+      
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
