--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: primuslearning
+  name: Alexion
   labels:
-    app: primuslearning
+    app: Alexion
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: primuslearning
+      app: Alexion
   template:
     metadata:
       labels:
-        app: primuslearning
+        app: Alexion
     spec:
       containers:
-        - name: primuslearning
+        - name: Alexion
           image: 274127640471.dkr.ecr.us-east-2.amazonaws.com/primuslearning:1.1
           imagePullPolicy: Always
           ports:
