--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -46,6 +46,9 @@ jobs:
     
       - name: Deploy to EKS
         run: |
+          kubectl config view
+          kubectl get pods -A
+          kubectl get deployments -A
           kubectl apply -f deployment.yaml
           kubectl apply -f service.yaml
 
