--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Alexion
+  name: alexion
   labels:
-    app: Alexion
+    app: alexion
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: Alexion
+      app: alexion
   template:
     metadata:
       labels:
-        app: Alexion
+        app: alexion
     spec:
       containers:
-        - name: Alexion
+        - name: alexion
           image: 274127640471.dkr.ecr.us-east-2.amazonaws.com/primuslearning:1.1
           imagePullPolicy: Always
           ports:
