--- a/service.yaml
+++ b/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: Alexion
+  name: alexion
 spec:
   selector:
-    app: Alexion
+    app: alexion
   ports:
     - protocol: TCP
       port: 80
